--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "^5.0.1",
-    "styled-components": "^6.0.3"
+    "react-scripts": "^2.1.3",
+    "styled-components": "^6.0.3",
+    "url-parse": "^1.5.10"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
